--- a/DU1/src/main/java/view/ThongKe.form
+++ b/DU1/src/main/java/view/ThongKe.form
@@ -535,7 +535,7 @@
                                           <Group type="102" alignment="0" attributes="0">
                                               <Component id="jLabel31" min="-2" pref="52" max="-2" attributes="0"/>
                                               <EmptySpace max="-2" attributes="0"/>
-                                              <Component id="lblbihuy2" min="-2" pref="106" max="-2" attributes="0"/>
+                                              <Component id="lblbihuy" min="-2" pref="106" max="-2" attributes="0"/>
                                           </Group>
                                       </Group>
                                       <EmptySpace max="32767" attributes="0"/>
@@ -558,7 +558,7 @@
                                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                                       <Group type="103" groupAlignment="3" attributes="0">
                                           <Component id="jLabel31" alignment="3" min="-2" max="-2" attributes="0"/>
-                                          <Component id="lblbihuy2" alignment="3" min="-2" max="-2" attributes="0"/>
+                                          <Component id="lblbihuy" alignment="3" min="-2" max="-2" attributes="0"/>
                                       </Group>
                                       <EmptySpace max="32767" attributes="0"/>
                                   </Group>
@@ -621,7 +621,7 @@
                                 <Property name="text" type="java.lang.String" value="0"/>
                               </Properties>
                             </Component>
-                            <Component class="javax.swing.JLabel" name="lblbihuy2">
+                            <Component class="javax.swing.JLabel" name="lblbihuy">
                               <Properties>
                                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                                   <Font name="Segoe UI" size="12" style="1"/>
@@ -1861,17 +1861,16 @@
                                               <Group type="102" attributes="0">
                                                   <EmptySpace pref="14" max="32767" attributes="0"/>
                                                   <Group type="103" groupAlignment="0" attributes="0">
-                                                      <Group type="103" alignment="1" groupAlignment="0" attributes="0">
-                                                          <Group type="102" attributes="0">
-                                                              <Component id="jLabel13" min="-2" max="-2" attributes="0"/>
-                                                              <EmptySpace type="separate" max="-2" attributes="0"/>
-                                                              <Component id="txtn" min="-2" pref="175" max="-2" attributes="0"/>
-                                                              <EmptySpace max="-2" attributes="0"/>
-                                                          </Group>
-                                                          <Group type="102" attributes="0">
+                                                      <Group type="102" alignment="1" attributes="0">
+                                                          <Group type="103" groupAlignment="0" attributes="0">
+                                                              <Group type="102" attributes="0">
+                                                                  <Component id="jLabel13" min="-2" max="-2" attributes="0"/>
+                                                                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                                                                  <Component id="txtn" min="-2" pref="175" max="-2" attributes="0"/>
+                                                              </Group>
                                                               <Component id="jScrollPane3" min="-2" pref="556" max="-2" attributes="0"/>
-                                                              <EmptySpace min="-2" pref="14" max="-2" attributes="0"/>
                                                           </Group>
+                                                          <EmptySpace min="-2" pref="14" max="-2" attributes="0"/>
                                                       </Group>
                                                       <Group type="102" alignment="1" attributes="0">
                                                           <Component id="btnhien" min="-2" max="-2" attributes="0"/>
